# attiny85-relay

./: .gitignore  Cargo.toml  README.md  Ravedude.toml  flake.nix  flash.sh  rust-toolchain.toml
src/: main.rs
