[package]
name = "relay"
version = "0.1.0"
authors = ["Nathan Henrie <nate@n8henrie.com>"]
edition = "2024"
license = "MIT"

[[bin]]
name = "relay"
test = false
bench = false

[dependencies]
panic-halt = "1"
ufmt = "0.2"
nb = "1.1"
embedded-hal = "1"

[dependencies.attiny-hal]
git = "https://github.com/rahix/avr-hal"
rev = "ff4909c00ceee76d60f8bd7cc95bc0f3e2ab673f"
features = ["attiny85", "rt"]

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
