[package]
name = "relay"
version = "0.1.0"
authors = ["Nathan Henrie <nate@n8henrie.com>"]
edition = "2024"
license = "MIT"
readme = "README.md"

[[bin]]
name = "relay"
test = false
bench = false

[dependencies]
panic-halt = "1"
ufmt = "0.2"
nb = "1.1"
embedded-hal = "1"

[dependencies.attiny-hal]
git = "https://github.com/rahix/avr-hal"
rev = "ff4909c00ceee76d60f8bd7cc95bc0f3e2ab673f"
features = ["attiny85", "rt"]

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"

# Required for rust-std nix builds
[dev-dependencies]
object = "0.37.1"
rustc-demangle = "0.1.26"
rustc-literal-escaper = "0.0.5"
# wasi = "0.14.4" # required by package `std v0.0.0 (/nix/store/wsl045mk0a06fhczxkq6w6azjyr1zvxy-rust-minimal-1.94.0-nightly-2025-12-13/lib/rustlib/src/rust/library/std)`
wasi = "0.11.0" #  required by package `std v0.0.0 (/nix/store/wsl045mk0a06fhczxkq6w6azjyr1zvxy-rust-minimal-1.94.0-nightly-2025-12-13/lib/rustlib/src/rust/library/std)`
