[package]
name = "relay"
version = "0.1.0"
authors = ["Nathan Henrie <nate@n8henrie.com>"]
edition = "2024"
license = "MIT"
readme = "README.md"

[[bin]]
name = "relay"
test = false
bench = false

[dependencies]
panic-halt = "1"
ufmt = "0.2"
nb = "1.1"
embedded-hal = "1"

[dependencies.attiny-hal]
git = "https://github.com/rahix/avr-hal"
rev = "ff4909c00ceee76d60f8bd7cc95bc0f3e2ab673f"
features = ["attiny85", "rt"]

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"

[dev-dependencies]
addr2line = "=0.25.1"
dlmalloc = "=0.2.11"
foldhash = "=0.2.0"
fortanix-sgx-abi = "0.6.1"
getopts = "0.2.24"
hermit-abi = "0.5.2"
libc = "=0.2.178"
moto-rt = "=0.15.2"
object = "=0.37.3"
r-efi = "5.3.0"
r-efi-alloc = "2.1.0"
rustc-demangle = "=0.1.26"
rustc-literal-escaper = "=0.0.5"
unwinding = "0.2.8"
vex-sdk = "=0.27.1"
wasi = "=0.11.1"

[build-dependencies]
wasi = "=0.14.4"
